# teach-rs-exercises

./: README.md
2-foundations-of-rust/3-advanced-syntax/3-slices/src/: main.rs
2-foundations-of-rust/3-advanced-syntax/4-ring-buffer/src/: main.rs
2-foundations-of-rust/3-advanced-syntax/5-boxed-data/src/: main.rs
2-foundations-of-rust/4-traits-and-generics/1-local-storage-vec/src/: lib.rs
2-foundations-of-rust/5-closures-and-dynamic-dispatch/1-config-reader/src/: main.rs
3-crate-engineering/1-crate-engineering/1-my-serde-app/src/: main.rs
3-crate-engineering/1-crate-engineering/3-bsn/src/: lib.rs
3-crate-engineering/1-crate-engineering/4-3d-printer/src/: lib.rs
3-crate-engineering/1-crate-engineering/5-fizzbuzz/src/: lib.rs
4-multitasking/2-parallel-multitasking/1-tf-idf/src/: main.rs
4-multitasking/2-parallel-multitasking/2-mutex/src/: main.rs
4-multitasking/3-asynchronous-multitasking/1-async-channels/src/: broadcast.rs  lib.rs  mpsc.rs  oneshot.rs
4-multitasking/3-asynchronous-multitasking/2-async-chat/src/: lib.rs
5-rust-for-web/1-rust-for-web/1-pastebin/: Cargo.toml
5-rust-for-web/1-rust-for-web/1-pastebin/src/: main.rs
6-rust-for-systems-programming/1-foreign-function-interface/1-crc-in-c/: Cargo.toml  build.rs
6-rust-for-systems-programming/1-foreign-function-interface/1-crc-in-c/src/: main.rs
6-rust-for-systems-programming/1-foreign-function-interface/2-crc-in-rust/: Cargo.toml  crc_in_rust.h  main.c
6-rust-for-systems-programming/1-foreign-function-interface/2-crc-in-rust/src/: lib.rs
(+2 files in other folders)
